@@ -15,6 +15,7 @@ import world.dungeon.theme.ThemeDefinitions;
 import world.item.Item;
 import world.item.Resource;
 import world.item.StackableItem;
+import world.item.Text;
 import world.item.inventory.Inventory;
 import world.item.inventory.ItemSlot;
 import world.lore.LockLeaf;
@@ -125,11 +126,17 @@ public class Dungeon implements Serializable {
         }
     }
     private void awardAccumulatedItems() {
+        Player player = Session.getPlayer();
         for (ItemSlot is : accumulatedItems) {
             Item i = is.peekItem();
-            if (i instanceof Resource && ((Resource) i).isLegacy())
-                Session.getLegacyResources().add(i, is.count());
-            else {
+            if (i instanceof Resource) {
+                if (((Resource) i).isLegacy())
+                    Session.getLegacyResources().add(i, is.count());
+                else
+                    player.getTransientResources().add(i, is.count());
+            } else if (i instanceof Text) {
+                player.getUnresearchedTexts().add(i, is.count());
+            } else {
                 //todo - reassign accumulatedItems to appropriate player inventories - remember to clone DegradableItems!
             }
         }
